--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/handler/main/MainHandler.java=UTF-8
+encoding//src/handler/main/MainNavHandler.java=UTF-8
+encoding//src/main/BoardAskDBBean.java=UTF-8
