--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="handler/main/LoginHandler.java|handler/main/LoginProHandler.java" kind="src" path="src"/>
+	<classpathentry excluding="handler/main/LoginHandler.java|handler/main/LoginProHandler.java|handler/user/SendMailProHandler.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0 ">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
