회원 마이페이지 처음창 (친구들 참여 설문; 친구 피드 처음) 빼고  연결은 다 됐음(기능들도 보수함 같음) 관리자는 보지도 않음. 친구 관리를 내 친구 , 친구 요청 상태, 추천 친구 3개로 나눔 . 친구들의 답변들 볼수 있는 란을 추가;사이드바 메뉴중 맨 위 친구 피드란 . 친구 추천이나 내 친구 관련 sql 좀 이상함.

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,7 +5,9 @@ encoding//src/handler/admin/MemberMngHandler.java=UTF-8
 encoding//src/handler/main/AskContentHandler.java=UTF-8
 encoding//src/handler/main/MainHandler.java=UTF-8
 encoding//src/handler/main/MainNavHandler.java=UTF-8
+encoding//src/handler/user/MyFrHandler.java=UTF-8
 encoding//src/handler/user/MypageHandler.java=UTF-8
+encoding//src/handler/user/RecomFrHandler.java=UTF-8
 encoding//src/handler/user/SendMailProHandler.java=UTF-8
 encoding//src/main/BoardAskDBBean.java=UTF-8
 encoding//src/user/FrDao.java=UTF-8
