--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,4 +17,7 @@
     <servlet-name>dotnet</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
+  <session-config>
+  	<session-timeout>60</session-timeout>
+  </session-config>
 </web-app>
