설문후 코멘트 창도 삭제가능

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,7 @@ encoding//src/handler/main/AskContentHandler.java=UTF-8
 encoding//src/handler/main/MainHandler.java=UTF-8
 encoding//src/handler/main/MainNavHandler.java=UTF-8
 encoding//src/handler/survey/UploadProHandler.java=UTF-8
+encoding//src/handler/user/CommentHandler.java=UTF-8
 encoding//src/handler/user/MyFrHandler.java=UTF-8
 encoding//src/handler/user/MypageHandler.java=UTF-8
 encoding//src/handler/user/RecomFrHandler.java=UTF-8
