--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,10 +6,12 @@ encoding//src/handler/main/AskContentHandler.java=UTF-8
 encoding//src/handler/main/MainHandler.java=UTF-8
 encoding//src/handler/main/MainNavHandler.java=UTF-8
 encoding//src/handler/survey/UploadProHandler.java=UTF-8
+encoding//src/handler/user/AskCompProHandler.java=UTF-8
 encoding//src/handler/user/CommentHandler.java=UTF-8
 encoding//src/handler/user/MyFrHandler.java=UTF-8
 encoding//src/handler/user/MypageHandler.java=UTF-8
 encoding//src/handler/user/RecomFrHandler.java=UTF-8
 encoding//src/handler/user/SendMailProHandler.java=UTF-8
 encoding//src/main/BoardAskDBBean.java=UTF-8
+encoding//src/user/CompDao.java=UTF-8
 encoding//src/user/FrDao.java=UTF-8
