--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//src/handler/admin/AdminPoMngHandler.java=UTF-8
 encoding//src/handler/admin/MemberMngHandler.java=UTF-8
 encoding//src/handler/admin/MwChartHandler.java=UTF-8
 encoding//src/handler/main/AskContentHandler.java=UTF-8
+encoding//src/handler/main/BoardAskHandler.java=UTF-8
 encoding//src/handler/main/MainHandler.java=UTF-8
 encoding//src/handler/main/MainNavHandler.java=UTF-8
 encoding//src/handler/survey/FiveSurHandler.java=UTF-8
