--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,6 +13,7 @@ encoding//src/handler/main/MainNavHandler.java=UTF-8
 encoding//src/handler/survey/UploadProHandler.java=UTF-8
 encoding//src/handler/user/AskCompProHandler.java=UTF-8
 encoding//src/handler/user/CommentHandler.java=UTF-8
+encoding//src/handler/user/GoodsHandler.java=UTF-8
 encoding//src/handler/user/MyFrHandler.java=UTF-8
 encoding//src/handler/user/MypageHandler.java=UTF-8
 encoding//src/handler/user/RecomFrHandler.java=UTF-8
